  recalculate MANIFEST every time).

- Issue #5798: Handle select.poll flag oddities properly on OS X.
  This fixes test_asynchat and test_smtplib failures on OS X.

- Issue #9543: Fix regression in socket.py introduced in Python 2.6.6 rc 1
  in r83624.

Extension Modules
-----------------

- Issue #7567: Don't call `setupterm' twice.

Tests
-----

- Issue #8433: Fix test_curses failure caused by newer versions of
  ncurses returning ERR from getmouse() when there are no mouse
  events available.


What's New in Python 2.6.6 rc 1?
================================

*Release date: 2010-08-03*

Core and Builtins
-----------------

- Issue #6213: Implement getstate() and setstate() methods of utf-8-sig and
  utf-16 incremental encoders.

- Issue #8271: during the decoding of an invalid UTF-8 byte sequence, only the
  start byte and the continuation byte(s) are now considered invalid, instead
  of the number of bytes specified by the start byte.
  E.g.: '\xf1\x80AB'.decode('utf-8', 'replace') now returns u'\ufffdAB' and
  replaces with U+FFFD only the start byte ('\xf1') and the continuation byte
  ('\x80') even if '\xf1' is the start byte of a 4-bytes sequence.
  Previous versions returned a single u'\ufffd'.

- Issue #9058: Remove assertions about INT_MAX in UnicodeDecodeError.

- Issue #8941: decoding big endian UTF-32 data in UCS-2 builds could crash
  the interpreter with characters outside the Basic Multilingual Plane
  (higher than 0x10000).

- Issue #8627: Remove bogus "Overriding __cmp__ blocks inheritance of
  __hash__ in 3.x" warning.  Also fix "XXX undetected error" that
  arises from the "Overriding __eq__ blocks inheritance ..." warning
  when turned into an exception: in this case the exception simply
  gets ignored.

- Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
  entries, consider the first one.

- Issue #9354: Provide getsockopt() in asyncore's file_wrapper.
